--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
     <!----------- HEADER ----------->
     <br>
     <header class='main-header' id='section-home'>
-        <h1 class='typewriter'>JULIUS PASILIAO</h1>
+        <h1 class='typewriter'>ALLEN CASTILLO</h1>
         <h2>JOURNEY TO SELF-DISCOVERY AND A ROAD TO FUTURE WEB-DEVELOPER</h2>
         <br>
-        <img src='Assets/picture-profile.jpg'  alt='profile-picture'> <br>
+        <img src='asset/asdasdasdsd.jpg'  alt='profile-picture'> <br>
         <a href='Assets/My Resume.pdf'>Download Resumé</a>
         <p>
             For over a decade, I still searching and looking for my calling. <br>
